Implemented functionality to get the sleep data by timestamp range and added basic unit tests for the whole project as well as some basic error handling